# polimor

./: CMakeLists.txt  LICENSE  README.md  buildit.sh  conanfile.txt
docs/: configuring_polimor.md
docs/example_configs/: nats-server.conf
src/: CMakeLists.txt
src/agents/: agents.h
src/common/: CMakeLists.txt  config_parser.h  pimpl.h  process_control.h  qs_exception.h
src/common/impl/: CMakeLists.txt  config_parser_impl.h  pimpl_impl.h  yaml_config.cc
src/messaging/: CMakeLists.txt  messaging.cc  messaging.h
src/messaging/details/: CMakeLists.txt  jetstream_messaging_impl.cc  jetstream_messaging_impl.h  message_json_deserializer_boost_impl.h  message_json_parser_boost_impl.cc  message_json_serializer_boost_impl.h  messages.h  messaging_common.h  migration_message_json_deserializer_boost_impl.cc  migration_message_json_serializer_boost_impl.cc  posix_messaging_impl.cc  posix_messaging_impl.h  purge_message_json_deserializer_boost_impl.cc  purge_message_json_serializer_boost_impl.cc  recorder_message_json_deserializer_boost_impl.cc  recorder_message_json_serializer_boost_impl.cc  scan_message_json_deserializer_boost_impl.cc  scan_message_json_serializer_boost_impl.cc  serializers.h
src/migration_agents/: CMakeLists.txt  migration_agent.cc  migration_agent.h  migration_agent_cmd.cc
src/migration_agents/details/: CMakeLists.txt  lfs_migrate_migration_agent_impl.cc  lfs_migration_migration_agent_impl.h
src/policy_engine/: CMakeLists.txt  policy_engine.h  policy_engine_cmd.cc
src/policy_engine/details/: CMakeLists.txt  policy_engine.cc
src/purge_agents/: CMakeLists.txt  purge_agent_cmd.cc  purge_agents.cc  purge_agents.h
src/purge_agents/details/: CMakeLists.txt  purge_agent_impl.cc  purge_agent_impl.h
src/recording_agents/: CMakeLists.txt  recording_agent_cmd.cc  recording_agents.h
src/recording_agents/details/: CMakeLists.txt  sqlite_recorder_cmd.cc  sqlite_recording_agent_impl.cc
src/scan_agents/: CMakeLists.txt  scan_agent.cc  scan_agent.h  scan_agent_cmd.cc
src/scan_agents/details/: CMakeLists.txt  lfs_find_scan_agent.cc  lfs_find_scan_agent.h
src/tests/: CMakeLists.txt  concept_test.cc  config_parser_test.cc  coroutines_test.cc  fake_lfs_find.cc  jetstream_test.cc  json_deserializer_test.cc  json_serializer_test.cc  migration_agent_test.cc  nats_test.cc  pimpl_test.cc  policy_engine_test.cc  posix_messaging_test.cc  process_control_test.cc  purge_agent_test.cc  qs_exception_test.cc  recorder_agent_test.cc  regex_test.cc  scan_test.cc
src/tests/resources/: config.yaml
