# Add the directories where the code resides
add_subdirectory("common")
add_subdirectory("messaging")
add_subdirectory("scan_agents")
add_subdirectory("purge_agents")
add_subdirectory("migration_agents")
#add_subdirectory("recording_agents")
add_subdirectory("policy_engine")
add_subdirectory("tests")